src/styles/site.css
/* ... */
.fixed-footer-visibility-block {
  z-index: -1;
  width: 100%;
  height: 100vh;
  position: fixed;
}
.container-7 {
  z-index: 5;
  order: 1;
  width: 100%;
  min-width: 0;
  max-width: none;
  min-height: 0%;
  margin-bottom: 40px;
  margin-left: 0;
  display: none;
  position: relative;
  inset: auto 0% 0%;
}
.heading-22 {
  color: #161616;
  order: -1;
  margin-left: 0;
  font-family: Zalandosansexpanded Variablefont Wght, Arial, sans-serif;
  font-size: 3vh;
  line-height: 100%;
  position: relative;
  inset: 0% auto auto 0;
}
.hero-image-2 {
  z-index: 1;
  clear: both;
  object-fit: cover;
  background-image: linear-gradient(90deg, #161616 20%, #0000 60%), url("/assets/664d749fb3efb6a1eb5e28c0_20240110_180431.jpg");
  background-position: 0 0, 50%;
  background-repeat: repeat, no-repeat;
  background-size: auto, cover;
  border-radius: 30px;
  width: 30vw;
  min-width: 30vw;
  max-width: 25vw;
  min-height: 30vw;
  max-height: 25vw;
  margin-top: 5px;
  margin-left: 0;
  margin-right: auto;
  position: absolute;
  inset: 0% auto 0% 55.8vw;
  transform: rotate(12deg);
  box-shadow: 0 4px 14px #0006;
}
.background-video-2 {
  z-index: 1;
  clear: none;
  background-image: url("/assets/67170202316be4d9d4894844_placeholder.webp");
  background-position: 0 0;
  background-size: auto;
  border-radius: 30px;
  width: 100%;
  height: 100%;
  font-size: 100px;
  line-height: 100px;
  display: block;
  position: absolute;
  inset: auto 198px 0 0%;
}
.herotext {
  z-index: 2;
  box-sizing: border-box;
  float: none;
  clear: none;
  aspect-ratio: auto;
  color: #6100b9;
  font-variation-settings: "wght" 500;
  text-align: left;
  letter-spacing: 0;
  text-indent: 0;
  overflow-wrap: normal;
  -webkit-text-decoration-skip-ink: auto;
  text-decoration-skip-ink: auto;
  vertical-align: text-bottom;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0;
  font-family: Zalandosansexpanded Variablefont Wght, Arial, sans-serif;
  font-size: clamp(4rem, 25vw, 20rem);
  font-weight: 500;
  line-height: 75%;
  text-decoration: none;
  display: block;
  position: relative;
  inset: 0% 0 0% -17px;
  overflow: visible;
}
.herotext._2 {
  box-sizing: content-box;
  clear: none;
  text-align: right;
  overflow-wrap: normal;
  object-fit: fill;
  object-position: 100% 50%;
  direction: ltr;
  line-height: 80%;
  left: 0;
}
.spline-scene-10 {
  z-index: 5;
  aspect-ratio: auto;
  min-height: 0%;
  position: absolute;
  inset: 0%;
  overflow: visible;
}
.heading-24 {
  width: 100%;
  margin-left: 0;
  font-family: Zalandosansexpanded Variablefont Wght, Arial, sans-serif;
  font-size: 15em;
  font-weight: 500;
  line-height: 80%;
  position: relative;
  inset: auto auto 0% 0;
}
.div-block-10 {
  width: 100%;
  margin-right: 0;
  padding-right: 0;
}
.container-9 {
  z-index: 2;
  background-color: var(--white);
  justify-content: space-between;
  align-items: center;
  max-width: none;
  height: 100vh;
  padding: 0 24px;
  display: flex;
  position: relative;
}
.wrapper {
  flex-flow: row;
  order: 0;
  justify-content: space-around;
  align-self: auto;
  align-items: center;
  width: 1350px;
  display: flex;
}
.div-block-12 {
  box-sizing: border-box;
  object-fit: fill;
  width: 100%;
  margin-left: 0;
  padding-left: 0;
  display: block;
  position: relative;
  left: auto;
}
.video-2 {
  aspect-ratio: auto;
  object-fit: fill;
  align-self: center;
  width: auto;
  height: auto;
  max-height: 100vh;
  position: static;
}
.videowrapper {
  aspect-ratio: auto;
  object-fit: contain;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  height: auto;
  max-height: 100vh;
  margin-bottom: 40px;
  display: flex;
  position: relative;
  overflow: visible;
}
.award {
  color: var(--black);
  font-family: Zalandosansexpanded Variablefont Wght, Arial, sans-serif;
}
.bottomcta {
  width: 100%;
  color: var(--white);
  text-align: center;
  margin-right: 0;
  font-size: 80px;
  font-weight: 400;
  line-height: 60px;
  display: block;
}
.bottomcta:hover {
  margin-left: 0;
  margin-right: 0;
}
.background-video-3 {
  width: 100%;
  height: 100%;
  position: absolute;
}
.if-lib-rangeslider_wrapper {
  border-radius: .5rem;
  margin-top: 10px;
  margin-bottom: 10px;
  position: relative;
}
.if-lib-rangeslider_track {
  cursor: pointer;
  background-color: #0000000d;
  border-radius: .2rem;
  justify-content: space-around;
  align-items: center;
  height: .75rem;
  margin-top: .75rem;
  margin-bottom: 1.5rem;
  display: flex;
  position: relative;
}
.if-lib-rangeslider_trackfill {
  background-color: var(--purple);
  opacity: 1;
  border-radius: .2rem;
  position: absolute;
  inset: 0% 50% 0% 25%;
}
.if-lib-rangeslider_handle {
  z-index: 1;
  background-color: var(--default);
  border-radius: 8rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  left: 23%;
  box-shadow: 0 0 2rem #00000036;
}
.if-lib-rangeslider_handle:focus {
  outline-style: solid;
  outline-offset: .12rem !important;
  outline-width: .12rem !important;
  outline-color: var(--blue-gray) !important;
}
.if-lib-rangeslider_handle.is-2 {
  border-radius: 8rem;
  left: 48%;
}
.if-lib-rangeslider_display-values {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  justify-content: space-between;
  align-items: center;
  display: flex;
}
.if-lib-rangeslider_display-value {
  font-size: 1.125rem;
  font-weight: 500;
}
.if-lib-rangeslider_inputs {
  display: none;
}
.checkbox {
  width: 1.4rem;
  height: 1.4rem;
  margin-top: 0;
  line-height: 0;
}
.checkbox.w--redirected-checked {
  background-color: var(--purple);
}
.text-block-6 {
  margin-bottom: 15px;
}
.checkbox-label {
  margin-bottom: 0;
  margin-left: 5px;
  font-size: 18px;
  font-weight: 400;
  line-height: 114%;
  display: block;
}
.div-block-23 {
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  display: grid;
}
/* ... */

